--- a/documentation/02.md
+++ b/documentation/02.md
@@ -22,4 +22,4 @@ cmaker -n my_library library
 
 which will create a ``static`` library project. To change the kind of library\
 to create, you should pass the ``-k`` flag with one of the following values:\
-``static, shared, header-onyly``.
+``static, shared, header-only``.
